# ddl

./: .gitignore  .gitlab-ci.yml  .luacheckrc  .luacov  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README-RU.md  README.md  README.ru-RU.md  ddl-scm-1.rockspec  ddl.lua  deps.sh  errors.txt
.github/workflows/: publish.yaml  reusable_test.yml  test.yml
cartridge/roles/: ddl-manager.lua  schema-api.lua
cmake/: FindLuaCheck.cmake  FindLuaTest.cmake
ddl/: cache.lua  check.lua  check_schema.lua  compare.lua  db.lua  get.lua  get_schema.lua  set.lua  set_schema.lua  utils.lua  validator.lua  version.lua
test/: bench_cache.lua  bucket_id_test.lua  cache_test.lua  check_schema_test.lua  check_sharding_key_test.lua  check_sharding_metadata_test.lua  db.lua  ddl_get_schema_test.lua  ddl_set_schema_test.lua  ddl_validate_test.lua  get_schema_test.lua  helper.lua  role_test.lua  set_schema_test.lua  set_schema_with_sequence_test.lua  set_sharding_key_test.lua  set_sharding_metadata_test.lua  set_trigger_test.lua  tarantool_helpers.lua  utils_test.lua
test/entrypoint/: schema-api_role_init.lua  srv_basic.lua
test/integration/: schema-api_role_test.lua
